<resources>
    //Strings in main menu
    <string name="welcomeMessage">Hallo</string>
    <string name="toExplanation">Uitleg</string>
    <string name="toHighscore">Highscores</string>
    <string name="toGame">Start het spel</string>

    //Strings in explaination
    <string name="exp_title">Uitleg</string>
    <string name="exp_text">Tik met de telefoon op de vliegtuigen. \n
                            Voor iets wat geen vliegtuig is krijg je minpunten. \n
                            Probeer het level zo snel mogelijk uit te spelen om een highscore te halen.</string>

    //Strings in game
    <string name="app_name">tle34nfc</string>
    <string name="instructions">Vind alle vliegtuigen</string>
    <string name="_0">0/14</string>
    <string name="tag_id">tag_id</string>
    <string name="already_found">Deze heb je al</string>
    <string name="score">score: 0</string>
    <string name="score_without_number">score:</string>

    //Strings in game completed
    <string name="finished">Je hebt ze allemaal gevonden!</string>
    <string name="toMenu">Menu</string>
    <string name="badTagMsg">Dit is geen vlegtuig</string>
    <string name="go_back">Ga terug</string>
    <string name="real_zero">0</string>
    <string name="topscores">Topscores</string>
    <string name="title_activity_name">Name</string>
    <string name="name_input_label">Vul je naam in</string>
    <string name="name">Naam</string>
    <string name="start">start</string>


    //Srings in highscores

</resources>
