<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.scanner.tle34.wimjo.tle34nfc.MainMenu"
    android:background="@drawable/background"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"

            >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:shadowColor="#000000"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:text="@string/exp_title"
            android:textAlignment="center"
            android:textColor="#FF0000"
            android:textSize="38sp"
            android:textStyle="bold"
            android:paddingBottom="20dp"
            >

        </TextView>



            <TextView
                android:id="@+id/exp_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="#000000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"
                android:text="@string/exp_text"
                android:textAlignment="center"
                android:textColor="#FF0000"
                android:textSize="30sp"
                android:textStyle="bold"
                android:paddingBottom="50dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <Button
                    android:id="@+id/explanation_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_alignParentBottom="true"
                    android:background="#99ffffff"
                    android:textColor="#FF0000"
                    android:layout_marginBottom="1dp"
                    android:onClick="toMenu"
                    android:text="@string/go_back" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
